# graphene-studio

./: .gitignore  4Pice-atomtypes.itp  4Pice.itp  Makefile  Pipfile  README.ipynb  README.md  README2.ipynb  ToDo.md  autoquench.py  cnt.itp  continue-solvated-fullfix.mdp  diamond.ipynb  diamond.py  graphene.top  gromacs.py  gyroid.ipynb  gyroid.py  initial-graphene.mdp  initial-solvated-fullfix.mdp  initial-solvated.mdp  pbcfix.py  psurface.ipynb  psurface.py  pyproject.toml  restrain.py  run.py  solvated-fullfix.top  solvated.top  sphere.py  split.py  test.ipynb  tip4p.top
graphenator/: __init__.py  dual.py  graph.py  graphenate.py  interaction.py  pack.py  quench.py  surface.py
graphenator/surface/: __init__.py  diamond.py  gyroid.py  psurface.py  sphere.py
graphenestudio/: __init__.py  graph.py  gromacs.py  pack.py  quench.py
oplsaa.ff/: atomname2type.n2t
