[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "graphene-studio"
version = "0.1.0"
description = ""
authors = ["vitroid <vitroid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.2,<2.0.0"
pairlist = "^0.5.1.3"
yaplotlib = "^0.1.2"
matplotlib = "^3.9.0"
networkx = "^3.3"
cycless = "^0.4.2"
jupyter = "^1.0.0"
scipy = "^1.13.1"
isort = "^5.13.2"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
